--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
           <h2 class="hero_title">Hi, it's me jamshida</h2>
-          <p class="hero_desc">I am a professional freelancer in New York City</p>
+          <p class="hero_desc">I am a professional freelancer in mardala City</p>
       </div>
       </div>
   </div>
@@ -72,16 +72,15 @@
               <div class="row mt-3">
                   <div class="col-md-6">
                       <ul>
-                          <li>Name: David Parker</li>
-                          <li>Age: 28</li>
+                          <li>Name: jamshida</li>
+                          <li>Age: 22</li>
                           <li>Occupation: Web Developer</li>
 
                       </ul>
                   </div>
                   <div class="col-md-6">
-                      <ul>
-                          <li>Name: David Parker</li>
-                          <li>Age: 28</li>
+                      <ul>jamshida</li>
+                          <li>Age: 22</li>
                           <li>Occupation: Web Developer</li>
 
                       </ul>
