--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
     </div>
 </nav>
 
+  
+<div id="place"></div>
+<div id="state"></div>
+<div id="time"></div>
+<div id="temperature"></div>
+<div id="humidity"></div>
+<div id="observedAt"></div>
 
  <!-- main banner -->
  <section class="bgimage" id="home">
