--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 <div id="place"></div>
 <div id="state"></div>
 <div id="time"></div>
-ತಾಪಮಾನ <div id="temperature"></div>
-ಆರ್ದ್ರತೆ <div id="humidity"></div>
-<div id="observedAt"></div>
+<span>ತಾಪಮಾನ : <span id="temprature"></span>ಡಿಗ್ರಿಗಳು</span><br>
+<span>ಆರ್ದ್ರತೆ:<span  id="humidity"></span></span><br>
+<span>ಗಮನಿಸಿದ ಸಮಯ :<span id= "observedAt"></span></span>
 
  <!-- main banner -->
  <section class="bgimage" id="home">
