--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 </nav>
 
-  
+<div style="color: black;" id="catfact"></div>
 <div id="place"></div>
 <div id="state"></div>
 <div id="time"></div>
