--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
     </div>
 </nav>
 
-<div style="color: black;" id="catfact"></div>
-<div id="place"></div>
+<div style="color: black;" id="catFact"></div>
+  <div id="place"></div>
 <div id="state"></div>
 <div id="time"></div>
-<span>ತಾಪಮಾನ : <span id="temprature"></span>ಡಿಗ್ರಿಗಳು</span><br>
-<span>ಆರ್ದ್ರತೆ:<span  id="humidity"></span></span><br>
-<span>ಗಮನಿಸಿದ ಸಮಯ :<span id= "observedAt"></span></span>
+ <span>ತಾಪಮಾನ : <span id="temperature"></span> ಡಿಗ್ರಿಗಳು </span><br>
+<span>ಆರ್ದ್ರತೆ: <span id="humidity"></span></span><br>
+<span>ಗಮನಿಸಿದ ಸಮಯ:<span id="observedAt"></span></span>
 
  <!-- main banner -->
  <section class="bgimage" id="home">
