--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         </div>
     </div>
 </nav>
-
+  
+<div id = "wd">
 <div style="color: black;" id="catFact"></div>
   <div id="place"></div>
 <div id="state"></div>
@@ -50,7 +51,9 @@
  <span>ತಾಪಮಾನ : <span id="temperature"></span> ಡಿಗ್ರಿಗಳು </span><br>
 <span>ಆರ್ದ್ರತೆ: <span id="humidity"></span></span><br>
 <span>ಗಮನಿಸಿದ ಸಮಯ:<span id="observedAt"></span></span>
+</div>
 
+  
  <!-- main banner -->
  <section class="bgimage" id="home">
   <div class="container-fluid">
