--- a/index.html
+++ b/index.html
@@ -11,8 +11,21 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/31149d48b0.js" crossorigin="anonymous"></script>
-</head>
 
+</head>
+<style>
+    #wdOut{
+      display:flex;
+      justify-content: flex-end;
+    }
+    #wd {
+      text-align: right;
+      border: 1px solid red;
+      background-color: #fcf795;
+      width: 50%;
+}
+   
+  </style>
 <body>
   <nav class="navbar navbar-expand-lg fixed-top navbarScroll">
     <div class="container">
@@ -42,7 +55,10 @@
         </div>
     </div>
 </nav>
+
+
   
+  <div id = "out">
 <div id = "wd">
 <div style="color: black;" id="catFact"></div>
   <div id="place"></div>
@@ -52,7 +68,9 @@
 <span>ಆರ್ದ್ರತೆ: <span id="humidity"></span></span><br>
 <span>ಗಮನಿಸಿದ ಸಮಯ:<span id="observedAt"></span></span>
 </div>
+</div>
 
+  
   
  <!-- main banner -->
  <section class="bgimage" id="home">
