--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 
   
-  <div id = "out">
+  <div id = "wdOut">
 <div id = "wd">
 <div style="color: black;" id="catFact"></div>
   <div id="place"></div>
