--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       justify-content: flex-end;
     }
     #wd {
-      text-align: right;
+      text-align: center;
       border: 1px solid red;
       background-color: #fcf795;
       width: 50%;
