--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
       justify-content: flex-end;
     }
     #wd {
-      text-align: center;
+      text-align: right;
       border: 1px solid red;
       background-color: #fcf795;
       width: 50%;
+      border redius:50% ;
 }
    
   </style>
