--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       border: 1px solid red;
       background-color: #fcf795;
       width: 50%;
-      border redius:50% ;
+      border-redius:50%;
 }
    
   </style>
