--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       background-color: #fcf795;
       width: 50%;
       border-radius: 50%;
+      width:25%
+      font-size:small;
+      height:150px
        
 }
    
